--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,10 @@
         <action android:name="android.intent.action.TTS_SERVICE" />
     </intent>
 </queries>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" >
+
+    </uses-permission>
+        <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
