--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
 
     <application
         android:allowBackup="true"
+        android:name=".history.HistoryApp"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
@@ -23,7 +24,7 @@
         android:theme="@style/Theme.7MinuteWorkoutApp"
         tools:targetApi="31">
         <activity
-            android:name=".HistoryActivity"
+            android:name=".history.HistoryActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
